@@ -13,3 +13,4 @@ elmer:fucVibC2NzOtg
 thor:fucVibC2NzOtg
 this.user.has.a.dot@dot.com:fucVibC2NzOtg
 deckard:$apr1$vyS3rvbH$Ye8UqFG2CKAbdrFYMPHVY1
+bar:$apr1$xt$Mx3soOiejI3LQaZqJFlvL/
